<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LandingActivity"
    android:orientation="vertical"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_greeting"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="150dp"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo_qhopes_tranparent"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dokter"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/but_primary"
        android:text="@string/dokter"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pasien"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/but_primary"
        android:text="@string/pasien"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

</LinearLayout>