<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ln_carousel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/ln_carousel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <com.synnapps.carouselview.CarouselView
                            android:id="@+id/carousel_view"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            app:fillColor="@color/colorPrimary"
                            app:pageColor="#00000000"
                            app:radius="6dp"
                            app:slideInterval="3000"
                            app:strokeColor="#FF777777"
                            app:strokeWidth="0dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <com.balysv.materialripple.MaterialRippleLayout
                            style="@style/RippleStyleDark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:orientation="vertical">

                                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                                        android:id="@+id/btn_dokter"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:elevation="0dp"
                                        android:tint="@color/white"
                                        app:backgroundTint="@color/colorPrimary"
                                        app:borderWidth="0dp"
                                        app:elevation="0dp"
                                        app:fabCustomSize="50dp"
                                        app:srcCompat="@drawable/ic_spesialis" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/main_menu1"
                                        android:textColor="@color/white"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </LinearLayout>
                        </com.balysv.materialripple.MaterialRippleLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <com.balysv.materialripple.MaterialRippleLayout
                            style="@style/RippleStyleDark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:orientation="vertical">

                                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                                        android:id="@+id/btn_antrian"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:elevation="0dp"
                                        android:tint="@color/white"
                                        app:backgroundTint="@color/colorPrimary"
                                        app:borderWidth="0dp"
                                        app:elevation="0dp"
                                        app:fabCustomSize="50dp"
                                        app:srcCompat="@drawable/ic_antrian" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/main_menu2"
                                        android:textColor="@color/white"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </LinearLayout>
                        </com.balysv.materialripple.MaterialRippleLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <com.balysv.materialripple.MaterialRippleLayout
                            style="@style/RippleStyleDark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:orientation="vertical">

                                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                                        android:id="@+id/btn_info"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:elevation="0dp"
                                        android:tint="@color/white"
                                        app:backgroundTint="@color/colorPrimary"
                                        app:borderWidth="0dp"
                                        app:elevation="0dp"
                                        app:fabCustomSize="50dp"
                                        app:srcCompat="@drawable/ic_information" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/main_menu3"
                                        android:textColor="@color/white"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </LinearLayout>
                        </com.balysv.materialripple.MaterialRippleLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/tbtn_menu_berita"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:scrollbars="none" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
